--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,10 +1,14 @@
 name: First-Workflow
-on: Workflow_dispatch
+
+on:
+  workflow_dispatch:
+
 jobs:
   my-firstjob:
     runs-on: ubuntu-latest
     steps:
       - name: Print Greeting
         run: echo "Hello"
+
       - name: Print Good-bye
         run: echo "Good-Bye"
